--- a/.github/workflows/preview-release.yml
+++ b/.github/workflows/preview-release.yml
@@ -3,10 +3,13 @@ on:
     pull_request:
         types: [ready_for_review, synchronize, opened, labeled]
         paths: [packages/**]
+    push:
+        branches:
+            - feature/*-pr-new
 
 jobs:
     preview-release:
-        if: github.repository == 'huntabyte/bits-ui' && contains(github.event.pull_request.labels.*.name, 'publish:preview')
+        if: (github.repository == 'huntabyte/bits-ui' && contains(github.event.pull_request.labels.*.name, 'publish:preview')) || github.repository == 'hmnd/bits-ui'
         timeout-minutes: 5
         runs-on: macos-latest
         steps:
